--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'variables';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&family=Poppins:wght@400;500;600;700&family=Volkhov:wght@700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 10px;
+
+    body {
+        font-size: 1.6rem;
+    }
+}
+
+// img {
+//     width: 100%;
+//     height: 100%;
+// }
+
+a {
+    text-decoration: none;
+    color: $font-color-primary;
+}
+
+ul, li {
+    list-style: none;
+}
+
+html, body { height: 100%;}
+body {margin: 0; font-family: Arial, Helvetica, sans-serif; }
