--- a/src/app/components/destinations/destinations.component.html
+++ b/src/app/components/destinations/destinations.component.html
@@ -1,93 +1,28 @@
 <div class="destinations">
-
-    <div class="destinations_header">
-        
-        <p class="destinations_header_txt">
+    <div class="destinations__header">
+        <p class="destinations__txt">
             Top Selling
         </p>
 
-        <h2 class="destinations_header_title">
+        <h2 class="destinations__title">
             Top Destinations
         </h2>
-
     </div>
 
-    <div class="destinations_main">
-
-        <div class="destinations_main_box">
-                        
-            <div class="destinations_main_box_content">
-                
-                <div class="destinations_main_box_content_title">
-                    
-                    <h3 class="destinations_main_box_content_title_txt">Rome, italy</h3>
-                   
-                    <h3 class="destinations_main_box_content_title_txt">$5,42k</h3>
-
+    <div class="destinations__main">
+        @for (card of cards; track $index) {
+            <div class="destinations__box" [ngStyle]="{'background-image': 'url(' + card.img +')'}">
+                <div class="destinations__content">                
+                    <div class="destinations__box-title">
+                        <h3 class="destinations__box-txt">Rome, italy</h3>
+                        <h3 class="destinations__box-txt">$5,42k</h3>
+                    </div>
+                    <div class="destinations__subtitle">                    
+                        <img class="destinations__subtitle-icon" src="./assets/CursorIcon.png" alt="Icon" [ngStyle]="{width: '2rem', height: '2rem'}" loading="lazy">
+                        <p class="destinations__subtitle-txt">10 Days Trip</p>
+                    </div>
                 </div>
-
-                <div class="destinations_main_box_content_subtitle">
-                    
-                    <img class="destinations_main_box_content_subtitle_icon" src="./assets/CursorIcon.png" alt="Icon" [ngStyle]="{width: '2rem', height: '2rem'}" loading="lazy">
-                    
-                    <p class="destinations_main_box_content_subtitle_txt">10 Days Trip</p>
-
-                </div>
-
             </div>
-
-        </div>
-
-
-        <div class="destinations_main_box background-london">
-                        
-            <div class="destinations_main_box_content">
-                
-                <div class="destinations_main_box_content_title">
-                    
-                    <h3 class="destinations_main_box_content_title_txt">London, UK</h3>
-                   
-                    <h3 class="destinations_main_box_content_title_txt">$4,2k</h3>
-
-                </div>
-
-                <div class="destinations_main_box_content_subtitle">
-                    
-                    <img class="destinations_main_box_content_subtitle_icon" src="./assets/CursorIcon.png" alt="Icon" [ngStyle]="{width: '2rem', height: '2rem'}" loading="lazy">
-                    
-                    <p class="destinations_main_box_content_subtitle_txt">12 Days Trip</p>
-
-                </div>
-
-            </div>
-
-        </div>
-
-
-        <div class="destinations_main_box background-europe">
-                        
-            <div class="destinations_main_box_content">
-                
-                <div class="destinations_main_box_content_title">
-                    
-                    <h3 class="destinations_main_box_content_title_txt">Full Europe</h3>
-                   
-                    <h3 class="destinations_main_box_content_title_txt">$15k</h3>
-
-                </div>
-
-                <div class="destinations_main_box_content_subtitle">
-                    
-                    <img class="destinations_main_box_content_subtitle_icon" src="./assets/CursorIcon.png" alt="Icon" [ngStyle]="{width: '2rem', height: '2rem'}" loading="lazy">
-                    
-                    <p class="destinations_main_box_content_subtitle_txt">28 Days Trip</p>
-
-                </div>
-
-            </div>
-
-        </div>
-
+        }
     </div>
-
 </div>
