--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="home_ilustration">
-        <img class="home_ilustration_img" ngSrc="./assets/Image.png" [width]="683" [height]="683" priority alt="Imagem Iluatrativa">
+        <img class="home_ilustration_img" src="./assets/Image.png" priority alt="Imagem Iluatrativa">
         <img class="home_ilustration_background" src="./assets/Decore.png" alt="Decoração flutuante de fundo">
     </div>
 </div>
