--- a/src/app/components/destinations/destinations.component.scss
+++ b/src/app/components/destinations/destinations.component.scss
@@ -7,84 +7,84 @@
     align-items: center;
     height: 80vh;
 
-    &_header{
+    &__header{
         text-align: center;
 
-        &_txt {
-            font-family: $font-poppins;
-            font-size: 1.8rem; 
-            font-weight: 600;
-            color: $font-color-secundary;
-        }
-
-        &_title {
-            font-family: $font-volk;
-            font-size: 5rem;
-            font-weight: 700;
-            color: $font-color-primary;
-            margin-top: 1rem;
-        }
+    }
+    
+    &__txt {
+        font-family: $font-poppins;
+        font-size: 1.8rem; 
+        font-weight: 600;
+        color: $font-color-secundary;
     }
 
-    &_main {
+    &__title {
+        font-family: $font-volk;
+        font-size: 5rem;
+        font-weight: 700;
+        color: $font-color-primary;
+        margin-top: 1rem;
+    }
+
+    &__main {
         margin-top: 6rem;
         display: flex;
         justify-content: center;
         gap: 3rem;
+    }
+    
+    &__box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 31.5rem;
+        height: 45.7rem;
+        border-radius: 2.4rem;
+        background-position-x: center;
+        position: relative;
+        transition: .4s ease-out;
+        cursor: pointer;
+        box-shadow: rgba(17, 12, 46, 0.116) 0px 48px 100px 0px;
+        position: relative;
         
-
-        &_box, &.background-londan, &.background-europe {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 31.5rem;
-            height: 45.7rem;
-            border-radius: 2.4rem;
-            background-image: url("/assets/Rome.png");
-            background-position-x: center;
-            position: relative;
-            filter: drop-shadow(0px 100px 80px rgba(0, 0, 0, 0.02)) drop-shadow(0px 64.8148px 46.8519px rgba(0, 0, 0, 0.0151852)) drop-shadow(0px 38.5185px 25.4815px rgba(0, 0, 0, 0.0121481)) drop-shadow(0px 20px 13px rgba(0, 0, 0, 0.01)) drop-shadow(0px 8.14815px 6.51852px rgba(0, 0, 0, 0.00785185)) drop-shadow(0px 1.85185px 3.14815px rgba(0, 0, 0, 0.00481481));
-
-            &.background-london {
-                background-image: url("/assets/London.png");
-            }
-           
-            &.background-europe {
-                background-image: url("/assets/Europe.png");
-            }
-
-            &_content {
-                width: 100%;
-                height: 13rem;
-                padding: 2rem;
-                background-color: #fff;
-                position: absolute;
-                bottom: 0;
-                border-radius: 0 0 2.4rem 2.4rem;
-                font-family: $font-poppins;
-                color: $font-color-secundary;
-
-                &_title {
-                    display: flex;
-                    justify-content: space-between;
-                    width: 100%;
-
-                    &_txt {
-                        font-weight: 500;
-                    }
-                }
-
-                &_subtitle {
-                    margin-top: 1.9rem;
-                    display: flex;
-                    gap: 1.5rem;
-                    align-items: center;
-
-                    &_txt {
-                        font-weight: 500;
-                    }
-                }
-            }
+        &:hover {
+            scale: 1.04;
         }
+    
+    }
+
+    &__content {
+        width: 100%;
+        height: 13rem;
+        padding: 2rem;
+        background-color: #fff;
+        position: absolute;
+        bottom: 0;
+        border-radius: 0 0 2.4rem 2.4rem;
+        font-family: $font-poppins;
+        color: $font-color-secundary;
+    }
+
+    &__box-title {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+    
+    &__box-txt {
+        font-weight: 500;
+    }
+
+    &__subtitle {
+        margin-top: 1.9rem;
+        display: flex;
+        gap: 1.5rem;
+        align-items: center;
+
+    }
+    
+    &__subtitle-txt {
+        font-weight: 500;
     }
 }
