update geral nos componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,11 @@
     <app-home/>
     <app-best-services/>
     <app-destinations/>
+    <app-bookings/>
+    <app-about/>
   </div>
 
   <div class="app__footer">
-    <!-- <app-footer/> -->
+    <app-footer/>
   </div>
 </div>
