--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,9 +5,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 14rem;
-    padding-top: 5rem;
-    padding-bottom: 3rem;
-    
+    display: flex;
+
     &_logo img {
         // min-width: 11.4rem;
         // height: auto;
