--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,11 +2,13 @@
 
 .home {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    height: 80vh;
-
+    padding: 0 15rem;
+    height: 100vh;
+    
     &_content {
+        min-width: 63rem;
         width: 63rem;
 
         &_article {
@@ -77,7 +79,7 @@
     &_ilustration {
         
         &_img {
-            max-width: 68.3rem;
+            max-width: 64rem;
         }
         
         &_background {
