adicionado scroll nas paginas

--- a/src/app/components/best-services/best-services.component.html
+++ b/src/app/components/best-services/best-services.component.html
@@ -1,4 +1,4 @@
-<div class="services">
+<div id="best-services" class="services">
    
     <div class="services_header">
         <p class="services_header_txt">
