--- a/src/app/components/destinations/destinations.component.html
+++ b/src/app/components/destinations/destinations.component.html
@@ -1,4 +1,4 @@
-<div class="destinations">
+<div id="destinations" class="destinations">
     <div class="destinations__header">
         <p class="destinations__txt">
             Top Selling
